# Robust-Detection

./: README.md
Fixed_Sample_Size/Two_Hypotheses/: examples.m  examples.py  lfds.py  lfds_density_band.m
Helper_Functions/: get_c.m  get_residuals.m  is_nonnegative_scalar.m  is_nonnegative_vector.m  is_positive_scalar.m  is_valid_density_band.m  robust_detection_helpers.py  set_densities.m  set_densities.m~
Multiple_Hypotheses/: README.md  examples.m  examples.py  initialize_bands.m  multi_lfds.py  multi_lfds_density_band.m  multi_lfds_density_band_proximal.m  multi_lfds_outlier.m  multi_lfds_outlier_proximal.m  readme.md  sanity_check_bands.m  update_residuals.m
Multiple_Hypotheses/C_Implementation/: CMakeLists.txt  README.md  readme.md
Multiple_Hypotheses/C_Implementation/algorithm/: CMakeLists.txt  cfpd.h  cfpd_algorithm.c  cfpd_algorithm.h  cfpd_errors.c  cfpd_errors.h  cfpd_function.h  cfpd_helper_functions.c  cfpd_helper_functions.h  cfpd_opt_problem.c  cfpd_opt_problem.h  cfpd_opt_problem_checks.c  cfpd_opt_problem_checks.h  lfds.h  lfds_algorithm.c  lfds_algorithm.h  lfds_errors.c  lfds_errors.h  lfds_function.h  lfds_helper_functions.c  lfds_helper_functions.h  lfds_opt_problem.c  lfds_opt_problem.h  lfds_opt_problem_checks.c  lfds_opt_problem_checks.h
Multiple_Hypotheses/C_Implementation/example/: CMakeLists.txt  cfpd_example.c  lfds_example.c  lfds_example_plot.p
Multiple_Hypotheses/C_Implementation/tests/: CMakeLists.txt  cfpd_tests.c  cfpd_tests.h  cfpd_tests_helper_functions.c  cfpd_tests_helper_functions.h  cfpd_tests_objective_function.h  lfds_tests.c  lfds_tests.h  lfds_tests_helper_functions.c  lfds_tests_helper_functions.h  lfds_tests_objective_function.c
Python/: lfds_density_band.py
Two_Hypotheses/: README.md  examples.m  examples.m~  examples.py  lfds.py  lfds_density_band.m  lfds_density_band.m~  lfds_outliers.m  lfds_outliers.m~  readme.md
